# px4-ros2-follower

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: control_params.yaml  obstacle_params.yaml  vision_params.yaml
docs/: API.md  DEBUG.md  INSTALLATION.md  USAGE.md
launch/: complete_system.launch.py  gazebo.launch.py
scripts/: install_dependencies.sh  setup.sh
src/follower_control/: package.xml
src/follower_control/follower_control/: __init__.py  controller.py  follower_node.py  state_manager.py
src/follower_obstacle/: package.xml
src/follower_obstacle/follower_obstacle/: __init__.py  obstacle_detector.py  obstacle_node.py
src/follower_simulator/: package.xml
src/follower_vision/: package.xml
src/follower_vision/follower_vision/: __init__.py  detector.py  tracker.py  vision_node.py
