<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>follower_vision</name>
  <version>0.1.0</version>
  <description>Vision-based target detection and tracking</description>
  <maintainer email="yomeii@example.com">Yomeii</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv-python</depend>

  <test_depend>ament_lint_auto</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
